* Fixed: Redirect 'Welcome' page for non-registered users and users without a subscription.
* Fixed: Coupon now adds trial occurrences to total occurrences - solves "Trial Occurrences must be less than total occurrences." bug.
* Fixed: 2CO forms now strip tags from subscription descriptions in input boxes. HTML was causing some unexpected behaviour.
		
== 3.5.1.4 ==
* Added: New option for default subscriptions. Explicitly assign default subscription to new users - for creating dripped access levels. Dev note: Implemented via Factory class.
* Fixed: Expiry date now assigned at user creation (where option is enabled in options). Note, user has to be created using standard WordPress function, wp_create_user(). Will not work for direct SQL entries.

== 3.5.1.3 ==
* Fixed: Including publicform.css and button.css when subscription button shortcode is used. 
* Fixed: References to 'global $member' where object may not exist. Membership_Plugin::currrent_member() now sets 'global $member'.
* Fixed: Blocking of $_GET['file'] when media protection is not 'hybrid' causing conflict with other plugins.
* Fixed: Mixed column bug on Membership listing.
* Fixed: Restored all Membership table functionality to reflect Membership 3.4 behaviour.
* Change: ?file= parameter replaced with ?ms_file= to avoid potential conflicts.

== 3.5.1.2 ==
* Fixed: 'All Members' page no longer displays empty levels and subscriptions.
* Fixed: Repair tables will now clean up empty subscription and level assignment (e.g. where id's are 0).
* Fixed: Deleting subscriptions and levels already assigned to users no longer creates empty entries.
* Fixed: Shortcode bug preventing admin from seeing content.  New behaviour, administrator will see all shortcode content. To test restricted content use "View site as:"
* Fixed: Associated role are now 'sticky'. Where roles are not explicitly defined they will revert to site default role.