@@ -7,6 +7,7 @@
 * Fixed: Redirect 'Welcome' page for non-registered users and users without a subscription.
 * Fixed: Coupon now adds trial occurrences to total occurrences - solves "Trial Occurrences must be less than total occurrences." bug.
 * Fixed: 2CO forms now strip tags from subscription descriptions in input boxes. HTML was causing some unexpected behaviour.
+* Fixed: Forced access level only applied with new user registration (or 3rd party scripts). Does not apply to users using the "Signup" links.
 		
 == 3.5.1.4 ==
 * Added: New option for default subscriptions. Explicitly assign default subscription to new users - for creating dripped access levels. Dev note: Implemented via Factory class.
